@startuml

title __POPULACE's Class Diagram__\n

  namespace com.management {
    namespace populace {
      class com.management.populace.Candidate {
          - alliedPartyName : String
          - hasWon : boolean
          - popularityScore : double
          + Candidate()
          + Candidate()
          + getAlliedPartyName()
          + getPopularityScore()
          + hasWon()
          + setAlliedParty()
          + toString()
          # setHasWon()
      }
    }
  }
  

  namespace com.management {
    namespace populace {
      class com.management.populace.Citizen {
          - DOB : String
          - aadharNumber : String
          - address : String
          - age : int
          - constituency : int
          - gender : String
          - name : String
          + Citizen()
          + generateAadharCard()
          + getAadharNumber()
          + getAddress()
          + getAge()
          + getConstituency()
          + getDOB()
          + getGender()
          + getName()
          + isEligible()
          + toString()
          {static} - generateAadharNumber()
      }
    }
  }
  

  namespace com.management {
    namespace populace {
      class com.management.populace.Party {
          ~ manifesto : String
          ~ name : String
          ~ partyMembers : ArrayList<Candidate>
          + Party()
          + buildManifesto()
          + buildParty()
          + changeCMto()
          + chooseCM()
          + getCMNAme()
          + getName()
          + getSeatsWon()
          + percentageOfSeatsWon()
          + showCM()
      }
    }
  }
  

  com.management.populace.Candidate -up-|> com.management.populace.Citizen
  com.management.populace.Party o-- com.management.populace.Candidate : chiefMinisterFace


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
